NetBSD Problem Report #50943

From www@NetBSD.org  Fri Mar 11 16:57:16 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C61FC7A20E
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Mar 2016 16:57:16 +0000 (UTC)
Message-Id: <20160311165715.BACB77ACB9@mollari.NetBSD.org>
Date: Fri, 11 Mar 2016 16:57:15 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/crypto/dist/ipsec-tools/src/racoon/privsep.c:1264]: (style) Suspicious condition
X-Send-Pr-Version: www-1.0

>Number:         50943
>Category:       security
>Synopsis:       src/crypto/dist/ipsec-tools/src/racoon/privsep.c:1264]: (style) Suspicious condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    security-officer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 11 17:00:00 +0000 2016
>Closed-Date:    Sat Mar 12 07:12:10 +0000 2016
>Last-Modified:  Sat Mar 12 07:12:10 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160311
>Organization:
>Environment:
>Description:
src/crypto/dist/ipsec-tools/src/racoon/privsep.c:1264]: (style) Suspicious condition (assignment + comparison); Clarify expression with parentheses.

Source code is

   if ((err = setsockopt(s, level, optname, optval, optlen) == 0) ||

Maybe better code

   if ((err = setsockopt(s, level, optname, optval, optlen)) == 0 ||

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50943 CVS commit: src/crypto/dist/ipsec-tools/src/racoon
Date: Fri, 11 Mar 2016 13:28:43 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Mar 11 18:28:43 UTC 2016

 Modified Files:
 	src/crypto/dist/ipsec-tools/src/racoon: privsep.c

 Log Message:
 PR/50943: David Binderman: Fix misplaced parenthesis.


 To generate a diff of this commit:
 cvs rdiff -u -r1.22 -r1.23 src/crypto/dist/ipsec-tools/src/racoon/privsep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sat, 12 Mar 2016 07:12:10 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.