PR/50943: David Binderman: Fix misplaced parenthesis.